feat: Used new delete use case
