# api/swagger.yaml
@@ -520,39 +520,6 @@ info:
   version: "1.0"
 openapi: 3.1.0
 paths:
-  /actions/{id}:
-    delete:
-      description: Deletes an existing building action.
-      parameters:
-      - description: Action id (UUID)
-        in: path
-        name: id
-        required: true
-        schema:
-          format: uuid
-          type: string
-      responses:
-        "204":
-          content:
-            application/json:
-              schema:
-                type: string
-          description: No Content
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
-          description: Bad Request
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
-          description: Internal Server Error
-      summary: Delete building action
-      tags:
-      - actions
   /healthcheck:
     get:
       description: Returns service health based on database connectivity.
@@ -684,6 +651,44 @@ paths:
       tags:
       - planets
   /planets/{id}/actions:
+    delete:
+      description: Deletes an existing building action for a planet.
+      parameters:
+      - description: Planet id (UUID)
+        in: path
+        name: id
+        required: true
+        schema:
+          format: uuid
+          type: string
+      responses:
+        "204":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rest.ResponseEnvelope-string'
+          description: Internal Server Error
+      summary: Delete building action for a planet
+      tags:
+      - actions
     post:
       description: Creates a building action for the planet provided in path parameter.
         The planet field in the body is ignored and replaced with this path value.
